# xor_engine

./: .gitignore  Cargo.toml  Dockerfile  ROADMAP.md  Readme.md  TO_DO.md  build.rs  build_and_run.sh  compile_kernel.sh  dockerfile  kernel.ptx  run.sh
.cargo/: compute-sanitizer.toml   config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: camera.rs  cuda_wrapper.rs  display.rs  dynamic_computation_graph.rs  ecs.rs  main.rs  main_WIP.rs  main_test.rs  scene.rs  scene_composition.rs  test_simple_shaders.rs  texture_utils.rs
src/ecs/: ecs_gpu_index_map.rs  ecs_gpu_interface.rs  math_op.rs
src/ecs/components/: camera.rs  collider.rs  constraint.rs  csg_tree.rs  group.rs  light.rs  material.rs  rotating.rs  sdf_base.rs  space_folding.rs  transform.rs  velocity.rs
src/ecs/system/: camera_movement.rs  input_system.rs  rotation.rs
src/gpu_utils/: kernel.cu  kernel.ptx  sphere_sdf.cu
tests/: test_cuInit.rs  test_simple_shaders.rs
