[package]
name         = "xor_engine"
version      = "0.1.0"
edition      = "2021"
default-run  = "xor_engine"

[dependencies]
sdl2             = { version = "0.34.5", default-features = false, features = ["ttf"] }
cuda-driver-sys  = "0.3.0"
rand             = "0.8"
cust             = "0.3.2"
image            = "0.25"
memoffset        = "0.9"
slotmap          = "1.0"

[build-dependencies]
cc = "1.0"

# ───────────── features ─────────────
[features]
default        = []   #"fast_math" for fastest by default for cargo run
gpu_mem_check  = []              # cargo gpu-mem-check keeps using this
fast_math      = []              # toggles NVCC --use_fast_math in build.rs

# ───────────── tuned profiles ─────────────
[profile.dev]
opt-level        = 0           # was 3
lto              = false       # was "thin"
codegen-units    = 16          # was 1 (lets rustc parallelize)
debug            = 1           # small DWARF; cheap and useful
debug-assertions = false
overflow-checks  = false
panic            = "abort"     # keep as you had
incremental      = true        # explicit (default in dev, but be clear)

[profile.release]
opt-level        = 3
lto              = "thin"
codegen-units    = 1
panic            = "abort"
debug            = 1